Upgrade deps, add Java 9 build Maven configuration, fix deprecated, dox.